force-app/main/default/objects/Meal_Plan__c/Meal_Plan__c.object-meta.xml
<CustomObject>
    <label>Meal Plan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meal Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>