force-app/main/default/objects/Meal_Plan__c/fields/Breakfast__c.field-meta.xml
<CustomField>
    <fullName>Breakfast__c</fullName>
    <label>Breakfast</label>
    <length>255</length>
    <type>Text</type>
</CustomField>