force-app/main/default/objects/Meal_Plan__c/fields/Breakfast_Time__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Time__c</fullName>
    <label>Breakfast Time</label>
    <type>Time</type>
</CustomField>