force-app/main/default/objects/Meal_Plan__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meal Plans</relationshipLabel>
    <relationshipName>Meal_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>