force-app/main/default/objects/Meal_Plan__c/fields/Dinner__c.field-meta.xml
<CustomField>
    <fullName>Dinner__c</fullName>
    <label>Dinner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>