force-app/main/default/objects/Meal_Plan__c/fields/Dinner_Time__c.field-meta.xml
<CustomField>
    <fullName>Dinner_Time__c</fullName>
    <label>Dinner Time</label>
    <type>Time</type>
</CustomField>