force-app/main/default/objects/Meal_Plan__c/fields/Lunch__c.field-meta.xml
<CustomField>
    <fullName>Lunch__c</fullName>
    <label>Lunch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>