force-app/main/default/objects/Meal_Plan__c/fields/Snack_1__c.field-meta.xml
<CustomField>
    <fullName>Snack_1__c</fullName>
    <label>Snack 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>