force-app/main/default/objects/Meal_Plan__c/fields/Snack_1_Time__c.field-meta.xml
<CustomField>
    <fullName>Snack_1_Time__c</fullName>
    <label>Snack 1 Time</label>
    <type>Time</type>
</CustomField>