force-app/main/default/objects/Meal_Plan__c/fields/Snack_2__c.field-meta.xml
<CustomField>
    <fullName>Snack_2__c</fullName>
    <label>Snack 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>