force-app/main/default/objects/Meal_Plan__c/fields/Snack_3__c.field-meta.xml
<CustomField>
    <fullName>Snack_3__c</fullName>
    <label>Snack 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>