force-app/main/default/objects/Meal_Plan__c/fields/Snack_3_Time__c.field-meta.xml
<CustomField>
    <fullName>Snack_3_Time__c</fullName>
    <label>Snack 3 Time</label>
    <type>Time</type>
</CustomField>